--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </plugin></plugins></build>
     <groupId>com.tailoredshapes</groupId>
     <artifactId>alexa</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <repositories>
         <repository>
             <id>clojars</id>
