Updating stl-clj version
should have multi stl file creation pretty soon

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <groupId>com.tailoredshapes</groupId>
+    <artifactId>alexa</artifactId>
+    <version>0.1.0</version>
+    
     <build>
         <plugins>
             <plugin>
@@ -61,9 +69,7 @@
             </plugin>
         </plugins>
     </build>
-    <groupId>com.tailoredshapes</groupId>
-    <artifactId>alexa</artifactId>
-    <version>0.1.0</version>
+
     <repositories>
         <repository>
             <id>clojars</id>
@@ -86,7 +92,7 @@
         <dependency>
             <groupId>stl-collector</groupId>
             <artifactId>stl-collector</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
 
         <!-- Test Dependencies -->
