--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,5 @@ jdk:
   - oraclejdk8
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+notifications:
+  slack: plaored:B6oRpUwCZoUm61z5CVlqsyTo
