Fixing the main class So that it works :facepalm:

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Alexa</mainClass>
+                            <mainClass>com.tailoredshapes.stl.alexa.Alexa</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -106,6 +106,7 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>1.10.19</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
