--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+script: mvn test -Djava.awt.headless=false -Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit -Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment
 jdk:
   - oraclejdk8
 after_success:
